force-app/main/default/objects/Village_Closed_Period__c/Village_Closed_Period__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold periods when the village is closed</description>
    <label>Village Closed Period</label>
    <nameField>
        <label>Village Closed Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Village Closed Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>