force-app/main/default/objects/Village_Closed_Period__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box will automatocally be checked if the closed period starts in the current year</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>