force-app/main/default/objects/Village_Closed_Period__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <inlineHelpText>The 1st date that the village is closed</inlineHelpText>
    <label>From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>