force-app/main/default/objects/Village_Closed_Period__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <inlineHelpText>The last date that the village is closed</inlineHelpText>
    <label>To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>