force-app/main/default/objects/Village_Closed_Period__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>Field to enforce uniqueness at village level</description>
    <inlineHelpText>Field to enforce uniqueness at village level</inlineHelpText>
    <label>Unique Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>