force-app/main/default/objects/Village_Closed_Period__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <inlineHelpText>The village</inlineHelpText>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Village Closed Periods</relationshipLabel>
    <relationshipName>Village_Closed_Periods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>