force-app/main/default/objects/Village_Closed_Period__c/fields/Village_Days_Closed__c.field-meta.xml
<CustomField>
    <fullName>Village_Days_Closed__c</fullName>
    <formula>(  To__c  -  From__c  )  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days the village will be closed</inlineHelpText>
    <label>Village Days Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>