force-app/main/default/objects/Village_Closed_Period__c/validationRules/From_and_To_must_be_the_same_year.validationRule-meta.xml
<ValidationRule>
    <fullName>From_and_To_must_be_the_same_year</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR( From__c )  &lt;&gt;  YEAR( To__c )</errorConditionFormula>
    <errorMessage>The from and To dates must be in the same year</errorMessage>
</ValidationRule>