force-app/main/default/objects/Village_Closed_Period__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Village_Days_Closed__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Sunday</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Sunday Closed</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>