force-app/main/default/objects/Village_Closed_Period__c/listViews/All_2014.listView-meta.xml
<ListView>
    <fullName>All_2014</fullName>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>From__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2014</value>
    </filters>
    <filters>
        <field>To__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2014</value>
    </filters>
    <label>All 2014</label>
    <sharedTo>
        <group>LeaseFlow_BAs</group>
    </sharedTo>
</ListView>